--- a/oscar/templates/catalogue/partials/add_to_basket_form.html
+++ b/oscar/templates/catalogue/partials/add_to_basket_form.html
@@ -1,4 +1,6 @@
 {% load basket_tags %}
+{% load i18n %}
+
 {% if product.stockrecord and product.stockrecord.is_available_to_buy %}
     {% basket_form basket product as basket_form %}
     <form action="{% url basket:add %}" method="post" class="form-stacked">
@@ -6,7 +8,7 @@
         {% include "partials/form_fields.html" with form=basket_form %}
 
         <div class="form-actions">
-            <button type="submit" class="btn btn-large btn-primary" value="Add to basket">Add to basket</button>
+			<button type="submit" class="btn btn-large btn-primary" value="Add to basket">{% trans "Add to basket" %}</button>
         </div>
     </form>
 {% endif %}
