--- a/oscar/templates/catalogue/partials/gallery.html
+++ b/oscar/templates/catalogue/partials/gallery.html
@@ -1,4 +1,5 @@
 {% load thumbnail %}
+{% load i18n %}
 
 {% with product.images.all as all_images %}
     {# use length rather then count as the images get queried anyways #}
@@ -7,8 +8,8 @@
     <script id="img-wrapper-tmpl" type="text/x-jquery-tmpl">
         <div class="rg-image-wrapper">
             <div class="rg-image-nav">
-               <a href="#" class="rg-image-nav-prev">Previous Image</a>
-               <a href="#" class="rg-image-nav-next">Next Image</a>
+				<a href="#" class="rg-image-nav-prev">{% trans "Previous Image" %}</a>
+				<a href="#" class="rg-image-nav-next">{% trans "Next Image" %}</a>
             </div>
             <div class="rg-image"></div>
             <div class="rg-loading"></div>
@@ -24,8 +25,8 @@
                     <!-- Elastislide Carousel Thumbnail Viewer -->
                     <div class="es-carousel-wrapper">
                             <div class="es-nav">
-                                    <span class="es-nav-prev">Previous</span>
-                                    <span class="es-nav-next">Next</span>
+								<span class="es-nav-prev">{% trans "Previous" %}</span>
+								<span class="es-nav-next">{% trans "Next" %}</span>
                             </div>
                             <div class="es-carousel">
                                     <ul>
