--- a/oscar/templates/reviews/reviews.html
+++ b/oscar/templates/reviews/reviews.html
@@ -1,17 +1,17 @@
 {% extends "layout.html" %}
-
 {% load currency_filters %}
 {% load history_tags %}
 {% load thumbnail %}
+{% load i18n %}
 
 {% block title %}
-Reviews for {{ product.title }} | {{ block.super }}
+{% trans "Reviews for" %} {{ product.title }} | {{ block.super }}
 {% endblock %}
 
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url promotions:home %}">Home</a>
+	<a href="{% url promotions:home %}">{% trans "Home" %}</a>
         <span class="divider">/</span>
     </li>
     <li>
@@ -20,7 +20,7 @@ Reviews for {{ product.title }} | {{ block.super }}
         <span class="divider">/</span>
         {% endwith %}
     </li>
-    <li class="active"><a href=".">Reviews of {{ product.get_title }}</a></li>
+	<li class="active"><a href=".">{% trans "Reviews of" %} {{ product.get_title }}</a></li>
 </ul>
 {% endblock %}
 
@@ -35,15 +35,15 @@ Reviews for {{ product.title }} | {{ block.super }}
     <div class="row-fluid">
         <div class='span9'>
             <div class="well">
-                <p>Read customer reviews on this product.</p>
-                <p><a href="{% url catalogue:reviews-add product.slug product.id %}" class="btn btn-primary">Add a review</a></p>
+				<p>{% trans "Read customer reviews on this product." %}</p>
+				<p><a href="{% url catalogue:reviews-add product.slug product.id %}" class="btn btn-primary">{% trans "Add a review" %}</a></p>
             </div>
             {% if reviews %}
-            <h4> Sort by: </h4>
+			<h4>{% trans "Sort by:" %}</h4>
             <form action="." method="get">
                 <select name="sort_by">
-                        <option value="score">Score</option>
-                        <option value="recency">Recency</option>
+					<option value="score">{% trans "Score" %}</option>
+					<option value="recency">{% trans "Recency" %}</option>
                 </select>
                 <input type="submit" value="Go" />
             </form>
@@ -55,11 +55,9 @@ Reviews for {{ product.title }} | {{ block.super }}
                     <p>{{ review.date_created }}<p>
                     <p>{{ review.body|linebreaks }}</p>
                     <p><a href="{{ review.get_absolute_url }}">Permalink</a>
-
-                                {% include 'reviews/_vote_bit.html' %}
-
+					{% include 'reviews/_vote_bit.html' %}
                     {% if review.has_votes %}
-                        <p>{{ review.num_up_votes }} customers agreed.</p>
+					<p>{% blocktrans %}{{ review.num_up_votes }} customers agreed.{% endblocktrans %}</p>
                     {% endif %}
                 </div>
                 {% endfor %}
@@ -68,15 +66,17 @@ Reviews for {{ product.title }} | {{ block.super }}
             <div class="pagination">
                 <span class="step-links">
                     {% if page_obj.has_previous %}
-                        <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
+					<a href="?page={{ page_obj.previous_page_number }}">{% trans "Previous" %}</a>
                     {% endif %}
                     {% if paginator.num_pages > 1 %}
                     <span class="current">
+						{% blocktrans %}
                         Page {{ page_obj.number }} of {{ paginator.num_pages }}.
+						{% endblocktrans %}
                     </span>
                     {% endif %}
                     {% if page_obj.has_next %}
-                        <a href="?page={{ page_obj.next_page_number }}">Next</a>
+					<a href="?page={{ page_obj.next_page_number }}">{% trans "Next" %}</a>
                     {% endif %}
                 </span>
             </div>
