--- a/oscar/templates/base.html
+++ b/oscar/templates/base.html
@@ -1,7 +1,8 @@
+{% load i18n %}
 <!DOCTYPE html> 
 <html lang="{% block language %}en-gb{% endblock %}">
     <head>
-		<title>{% if display_version %}[Build {{ version }}] {% endif %}{% block title %}{{ shop_name }} - {{ shop_tagline }}{% endblock %}</title>
+		<title>{% if display_version %}[{% trans "Build" %} {{ version }}] {% endif %}{% block title %}{{ shop_name }} - {{ shop_tagline }}{% endblock %}</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
         <meta name="created" content='{% now "jS M Y h:i" %}' />
         <meta name="description" content="{% block description %}{% endblock %}" />
@@ -66,6 +67,6 @@
 		</script>
 
 		{# Page meta-data #}
-		<!-- Version: {{ version }} -->
+		<!-- {% trans "Version:" %} {{ version }} -->
     </body>
 </html>
