--- a/oscar/templates/basket/basket.html
+++ b/oscar/templates/basket/basket.html
@@ -1,9 +1,10 @@
 {% extends "layout.html" %}
 {% load currency_filters %}
 {% load thumbnail %}
+{% load i18n %}
 
 {% block title %}
-Basket | {{ block.super }}
+{% trans "Basket" %} | {{ block.super }}
 {% endblock %}
 
 {% block checkout-nav %}
@@ -12,32 +13,34 @@ Basket | {{ block.super }}
 
 {% block header %}
 <div class="page-header action">
-    <h1>Basket</h1>
+    <h1>{% trans "Basket" %}</h1>
 </div>
 {% endblock header %}
 
 {% block content %}
 
 {% if basket_warnings %}
-	<h5>Important messages about items in your basket</h5>
+    <h5>{% trans "Important messages about items in your basket" %}</h5>
 	{% for warning in basket_warnings %}
 	<div class="alert">{{ warning }}</div>
 	{% endfor %}
 {% endif %}
 
 {% if upsell_messages %}
-	<h2>You could be missing out on offers!</h2>
+<h2>{% trans "You could be missing out on offers!" %}</h2>
 	{% for upsell in upsell_messages %}
-	<div class="warning">{{ upsell.message }} to quality for the <a href="{{ upsell.offer.get_absolute_url }}">{{ upsell.offer.name }}</a> special offer</div>
+    {% blocktrans with message=upsell.message url=upsell.offer.get_absolute_url offer_name=upsell.offer.name %}
+	<div class="warning">{{ upsell_message }} to qualify for the <a href="{{ url }}">{{ offer_name }}</a> special offer</div>
+    {% endblocktrans %}
 	{% endfor %}
 {% endif %}
 
 {% if not basket.is_empty %}
 <div class="basket-title">
     <div class="row-fluid">
-        <h4 class="span6">Items to buy now</h4>
-        <h4 class="span5">Quantity</h4>
-        <h4 class="span1">Price</h4>
+        <h4 class="span6">{% trans "Items to buy now" %}</h4>
+        <h4 class="span5">{% trans "Quantity" %}</h4>
+        <h4 class="span1">{% trans "Price" %}</h4>
     </div>
 </div>
 
@@ -64,10 +67,10 @@ Basket | {{ block.super }}
     	    <div class="span5">
     		    <div class="checkout-quantity">
     		        {{ form.quantity }} 
-    		        <button class="btn" type="submit">Update</button>
-    			    <a href="#" data-id="{{ forloop.counter0 }}" data-behaviours="remove" class="inline">Remove</a>
+                    <button class="btn" type="submit">{% trans "Update" %}</button>
+                    <a href="#" data-id="{{ forloop.counter0 }}" data-behaviours="remove" class="inline">{% trans "Remove" %}</a>
 					{% if request.user.is_authenticated %}
-					| <a href="#" data-id="{{ forloop.counter0 }}" data-behaviours="save" class="inline">Save for later</a>
+                    | <a href="#" data-id="{{ forloop.counter0 }}" data-behaviours="save" class="inline">{% trans "Save for later" %}</a>
 					{% endif %}
     			    <div style="display:none">
     				    {{ form.save_for_later }}
@@ -87,18 +90,18 @@ Basket | {{ block.super }}
 	{% block vouchers %}
 	<div class="span6">
 		<div class="sub-header">
-		    <h2>Voucher/Promo Code</h2>
+            <h2>{% trans "Voucher/Promo Code" %}</h2>
 		</div>
-		<p id="voucher_form_link"><a href="#voucher" class="btn">I have a voucher code...</a></p>
+        <p id="voucher_form_link"><a href="#voucher" class="btn">{% trans "I have a voucher code..." %}</a></p>
 
 	        <div id="voucher_form_container" style="display:none">
-	        	<h4>Voucher code</h4>
+                <h4>{% trans "Voucher code" %}</h4>
 	        	<form action="{% url basket:vouchers-add %}" method="post" class="form-horizontal">
 	        		{% csrf_token %}
 	        		{% include "partials/form_fields.html" with form=voucher_form %}
 	        		<div class="form-actions">
-	        			<button type="submit" class="btn btn-info">Add voucher</button>
-	        			or <a href="#" id="voucher_form_cancel">cancel</a>
+                        <button type="submit" class="btn btn-info">{% trans "Add voucher" %}</button>
+                        or <a href="#" id="voucher_form_cancel">{% trans "cancel" %}</a>
 	        		</div>
 	        	</form>
 	        </div>
@@ -108,7 +111,7 @@ Basket | {{ block.super }}
 	{% block baskettotals %}
 	<div class="span6">
 		<div class="sub-header">
-			<h2>Basket Totals</h2>
+            <h2>{% trans "Basket Totals" %}</h2>
 		</div>
 		<div id="basket_totals">
 			<table class="table table-striped table-condensed">
@@ -116,20 +119,20 @@ Basket | {{ block.super }}
 				{% with offer_discounts=basket.offer_discounts voucher_discounts=basket.grouped_voucher_discounts %}
 				{% if offer_discounts or voucher_discounts %}
 					<tr>
-						<th>Basket total (before discounts)</th>
+                        <th>{% trans "Basket total (before discounts)" %}</th>
 						<td>{{ basket.total_incl_tax_excl_discounts|currency }}</td>
 					</tr>
 					{% if offer_discounts %}
 						{% for discount in offer_discounts %}
 						<tr>
-							<td class="basket-discount">Special offer: {{ discount.name }}</td>
+                            <td class="basket-discount">{% trans "Special offer:" %} {{ discount.name }}</td>
 							<td>-{{ discount.discount|currency }}</td>
 						</tr>
 						{% endfor %}
 					{% endif %}
 					{% if voucher_discounts %}
 						<tr>
-							<th>Vouchers</th>
+                            <th>{% trans "Vouchers" %}</th>
 							<td></td>
 						</tr>
 						{% for discount in voucher_discounts %}
@@ -146,22 +149,22 @@ Basket | {{ block.super }}
 						{% endfor %}
 					{% endif %}
 					<tr>
-						<th>Basket total (after discounts)</th>
+                        <th>{% trans "Basket total (after discounts)" %}</th>
 						<td>{{ basket.total_incl_tax|currency }}</td>
 					</tr>
 				{% else %}
 					<tr>
-						<th>Basket total</th>
+                        <th>{% trans "Basket total" %}</th>
 						<td>{{ basket.total_incl_tax|currency }}</td>
 					</tr>
 				{% endif %}
 				{% endwith %}
 				<tr>
-					<th>Shipping ({{ shipping_method.name }})</th>
+                    <th>{% trans "Shipping" %} ({{ shipping_method.name }})</th>
 					<td>{{ shipping_charge_incl_tax|currency }}</td>
 				</tr>
 				<tr>
-					<th class="total"><h4>Order total</h4></th>
+                    <th class="total"><h4>{% trans "Order total" %}</h4></th>
 					<td class="total"><h4>{{ order_total_incl_tax|currency }}</h4></td>
 				</tr>
 				</tbody>
@@ -174,30 +177,30 @@ Basket | {{ block.super }}
 	
 {% block formactions %}
 	<div class="form-actions clearfix" >
-		<a href="{% url checkout:index %}" class="pull-right btn btn-large btn-primary">Proceed to checkout</a>
+        <a href="{% url checkout:index %}" class="pull-right btn btn-large btn-primary">{% trans "Proceed to checkout" %}</a>
 	</div>
 {% endblock formactions %}
 
 {% else %}
     {% block emptybasket %}
-        <p>Your basket is empty, you should probably add some items to buy.</p>
-        <a href="/" class="btn btn-primary">Continue shopping</a>
+    <p>{% trans "Your basket is empty, you should probably add some items to buy." %}</p>
+    <a href="/" class="btn btn-primary">{% trans "Continue shopping" %}</a>
     {% endblock %}
 {% endif %}
 
 {% if request.user.is_authenticated %}
 <div class="well">
     <div class="sub-header">
-        <h3>To buy later</h3>
+        <h3>{% trans "To buy later" %}</h3>
     </div>
 
     {% if not saved_formset %}
-    <p>Your saved basket is empty.</p>
+    <p>{% trans "Your saved basket is empty." %}</p>
 
     {% else %}
     <div class="row-fluid basket-title">
-        <h4 class="span8">To buy an item now, click "Move to basket"</h4>
-        <h4 class="span4">Price</h4>
+        <h4 class="span8">{% trans "To buy an item now, click 'Move to basket'" %}</h4>
+        <h4 class="span4">{% trans "Price" %}</h4>
     </div>
     <form action="{% url basket:saved %}" method="post" class="form-stacked later_summary" id="saved_basket_formset">
         {% csrf_token %}
@@ -214,15 +217,15 @@ Basket | {{ block.super }}
 					{% endwith %}
     		    </div>
     			<h4><a href="{{ form.instance.product.get_absolute_url }}">{{ form.instance.description }}</a></h4>
-    			<p class="app-ico instock avaliability ">{{ form.instance.product.stockrecord.availability }}</p>
-    			<a href="#" data-id="{{ forloop.counter0 }}" data-behaviours="remove">Remove</a>
+                <p class="app-ico {{ form.instance.product.stockrecord.availability_code }}">{{ form.instance.product.stockrecord.availability }}</p>
+                <a href="#" data-id="{{ forloop.counter0 }}" data-behaviours="remove">{% trans "Remove" %}</a>
     			<div style="display:none">
     				{{ form.move_to_basket }}
     				{{ form.DELETE }}
     			</div>
     		</div>
             <div class="span2"><p class="price">{{ form.instance.unit_price_incl_tax|currency }}</p></div>
-            <div class="span2"><a href="#" data-id="{{ forloop.counter0 }}" class="btn btn-success pull-right" data-behaviours="move">Move to basket</a></div>
+            <div class="span2"><a href="#" data-id="{{ forloop.counter0 }}" class="btn btn-success pull-right" data-behaviours="move">{% trans "Move to basket" %}</a></div>
         </div>
         {% endfor %}
     </form>
