--- a/oscar/templates/basket/partials/basket_quick.html
+++ b/oscar/templates/basket/partials/basket_quick.html
@@ -1,6 +1,7 @@
 {% load currency_filters %}
 {% load history_tags %}
 {% load basket_tags %}
+{% load i18n %}
 
 <ul class="basket_item">
 {% if request.basket.num_lines %}
@@ -8,18 +9,18 @@
     <li>
         <article>
             <h4><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></h4>
-            <p><strong>Quantity:</strong> <span>{{ line.quantity }}</span> x <span>{{ line.unit_price_excl_tax|currency }}</span></p>
+			<p><strong>{% trans "Quantity:" %}</strong> <span>{{ line.quantity }}</span> x <span>{{ line.unit_price_excl_tax|currency }}</span></p>
         </article>
     </li>
     {% endfor %}
     <li class="form-actions">
-        <h4><small>Total Excl Tax: {{ request.basket.total_excl_tax|currency }}</small> Total: {{ basket.total_incl_tax|currency }}</h4>
-		<p><a href="{% url basket:summary %}" class="btn btn-info btn-small">View Basket</a></p>
-        <p><a href="{% url checkout:index %}" class="btn btn-primary btn-small">Checkout</a></p>
+	<h4><small>{% trans "Total Excl Tax:" %} {{ request.basket.total_excl_tax|currency }}</small> {% trans "Total:" %} {{ basket.total_incl_tax|currency }}</h4>
+	<p><a href="{% url basket:summary %}" class="btn btn-info btn-small">{% trans "View Basket" %}</a></p>
+	<p><a href="{% url checkout:index %}" class="btn btn-primary btn-small">{% trans "Checkout" %}</a></p>
     </li>
 {% else %}
     <li>
-        <p>Your basket is empty, you should probably add some items to buy.</p>
+	<p>{% trans "Your basket is empty, you should probably add some items to buy." %}</p>
     </li>
 {% endif %}
 </ul>
