--- a/oscar/templates/basket/saved_list.html
+++ b/oscar/templates/basket/saved_list.html
@@ -1,18 +1,13 @@
 {% extends "layout.html" %}
-
 {% load currency_filters %}
+{% load i18n %}
 
 {% block header %}
-<h2>Saved Basket</h2>
+    <h2>{% trans "Saved Basket" %}</h2>
 {% endblock header %}
 
-
 {% block content %}
-
-{% for item in saved_items %}
-<p>{{ item }}</p>
-{% endfor %}
-
-
+    {% for item in saved_items %}
+    <p>{{ item }}</p>
+    {% endfor %}
 {% endblock content %}
-
