--- a/oscar/templates/catalogue/detail.html
+++ b/oscar/templates/catalogue/detail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
-
 {% load currency_filters %}
 {% load history_tags %}
+{% load i18n %}
 
 {% block title %}
 {{ product.title }} | {{ block.super }}
@@ -10,7 +10,7 @@
 {% block breadcrumbs %}
 <ul class="breadcrumb">
     <li>
-        <a href="{% url promotions:home %}">Home</a>
+	<a href="{% url promotions:home %}">{% trans "Home" %}</a>
         <span class="divider">/</span>
     </li>
 	{% with category=product.categories.all.0 %}
@@ -57,15 +57,15 @@
 			{% else %}
 			<p class="star">No Rating 
 			
-			<a href="{% url catalogue:reviews-add product.slug product.id %}#addreview">Add review</a>
+			<a href="{% url catalogue:reviews-add product.slug product.id %}#addreview">{% trans "Add review" %}</a>
 			</p>
 			{% endif %}
             
-            <p><strong>Product Code:</strong> <code>{{ product.upc }}</code></p>
+			<p><strong>{% trans "Product Code:" %}</strong> <code>{{ product.upc }}</code></p>
              
             <hr/>
             <ul>
-                <li><a href="#product_description">Read the full description</a></li>
+				<li><a href="#product_description">{% trans "Read the full description" %}</a></li>
             </ul>
 
             {% include "catalogue/partials/add_to_basket_form.html" %}
@@ -83,25 +83,25 @@
     <h2>Product Information</h2>
     <table class="table table-striped table-condensed">
         <tr>
-            <th>UPC</th><td>{{ product.upc }}</td>
+			<th>{% trans "UPC" %}</th><td>{{ product.upc }}</td>
         </tr>
         <tr>
-            <th>Product class</th><td>{{ product.product_class.name }}</td>
+			<th>{% trans "Product class" %}</th><td>{{ product.product_class.name }}</td>
         </tr>
         {% if product.stockrecord %}
         <tr>
-            <th>Price (excl. tax)</th><td>{{ product.stockrecord.price_incl_tax|currency }}</td>
+			<th>{% trans "Price (excl. tax)" %}</th><td>{{ product.stockrecord.price_incl_tax|currency }}</td>
         </tr>
         <tr>
-            <th>Price (incl. tax)</th><td>{{ product.stockrecord.price_excl_tax|currency }}</td>
+			<th>{% trans "Price (incl. tax)" %}</th><td>{{ product.stockrecord.price_excl_tax|currency }}</td>
         </tr>
         <tr>
-            <th>Availability</th>
+			<th>{% trans "Availability" %}</th>
             <td>{{ product.stockrecord.availability }}</td>
         </tr>
         {% endif %}
         <tr>
-            <th>Product type</th>
+			<th>{% trans "Product type" %}</th>
             <td>
             {% if product.is_group %}Product group{% else %}{% if product.is_variant %}Variant{% else %}Stand-alone{% endif %}{% endif %}
             </td>
@@ -113,7 +113,7 @@
         </tr>
         {% endfor %}
         <tr>
-            <th>Num reviews</th>
+			<th>{% trans "Num reviews" %}</th>
             <td>{{ reviews.count }}</td>
         </tr>
         <tr>
@@ -126,11 +126,11 @@
     {% block product_review %}
     <section>
         <div id="reviews" class="sub-header">
-            <h2>Customer Reviews</h2>
+			<h2>{% trans "Customer Reviews" %}</h2>
         </div>
         <p>Read customer reviews on this product.</p>
        <div class="review_read">
-           <a href="{% url catalogue:reviews-add product.slug product.id %}#addreview" class="btn btn-success">Add a review</a>
+		   <a href="{% url catalogue:reviews-add product.slug product.id %}#addreview" class="btn btn-success">{% trans "Add a review" %}</a>
        </div>
 
         {% if reviews %}
@@ -139,7 +139,7 @@
                     <article class="review">
                         <header>
                             <h3 class="star"><a href="{{ review.get_absolute_url }}">{{ review.title }} <span>{{ review.score }}</span></a></h3>
-                            <h4>Reviewed by {{ review.get_reviewer_name }} <small>({{ review.date_created }})</small></h4>
+							<h4>{% trans "Reviewed by" %} {{ review.get_reviewer_name }} <small>({{ review.date_created }})</small></h4>
                         </header>
                         <div class="row-fluid">
                             <div class="span8 review_content">  
@@ -159,7 +159,7 @@
                     </article>
                 {% endfor %}
                 <div class="review_all">
-                    <a href="{% url catalogue:reviews-list product.slug product.id %}" class="btn">See all reviews</a>
+					<a href="{% url catalogue:reviews-list product.slug product.id %}" class="btn">{% trans "See all reviews" %}</a>
                 </div>
             </div>
         {% endif %}
@@ -170,7 +170,7 @@
         {% if product.related_products.count %}
         <div class="span6">
             <div class="sub-header">
-                <h2>Related items</h2>
+				<h2>{% trans "Related items" %}</h2>
             </div>
             <div class="es-carousel-wrapper">
                 <div class="es-carousel">
@@ -189,7 +189,7 @@
         {% if product.recommended_products.count %}
         <div class="span6">
             <div class="sub-header">
-                <h2>Recommended items</h2>
+				<h2>{% trans "Recommended items" %}</h2>
             </div>
             <div class="es-carousel-wrapper">
                 <div class="es-carousel">
