--- a/oscar/templates/catalogue/partials/product.html
+++ b/oscar/templates/catalogue/partials/product.html
@@ -1,5 +1,6 @@
 {% load currency_filters %}
 {% load thumbnail %}
+{% load i18n %}
 
 <article class="product_pod">
     <div class="image_container">
@@ -29,13 +30,13 @@
     <div class="product_price">
         {% if product.has_stockrecord %}    
             {% if product.is_group %}
-                <h4><span>From</span> {{ product.min_variant_price_incl_tax|currency }}</h4>
+			<h4><span>{% trans "From" %}</span> {{ product.min_variant_price_incl_tax|currency }}</h4>
             {% else %}
                 <h4>{{ product.stockrecord.price_incl_tax|currency }}</h4>
             {% endif %}
             <p class="app-ico {{ product.stockrecord.availability_code }} avaliability ">{{ product.stockrecord.availability|truncatewords:2 }}</p>
         {% else %}
-            <p class="app-ico avaliability outofstock">Not available</p>
+		<p class="app-ico avaliability outofstock">{% trans "Not available" %}</p>
         {% endif %}
 
         {% include "catalogue/partials/add_to_basket_form_compact.html" %}
