--- a/oscar/templates/catalogue/partials/stock_record.html
+++ b/oscar/templates/catalogue/partials/stock_record.html
@@ -1,4 +1,5 @@
 {% load currency_filters %}
+{% load i18n %}
 
 {% if product.is_group %}
     <h2 class="price_color">From {{ product.min_variant_price_incl_tax|currency }}</h2>
@@ -7,6 +8,6 @@
         <h2 class="price_color">{{ product.stockrecord.price_incl_tax|currency }}</h2>
         <p class="app-ico {{ product.stockrecord.availability_code }} avaliability ">{{ product.stockrecord.availability|truncatewords:2 }}</p>
     {% else %}
-        <p class="app-ico avaliability outofstock">Not available</p>
+	<p class="app-ico avaliability outofstock">{% trans "Not available" %}</p>
     {% endif %}
 {% endif %}
