--- a/oscar/templates/checkout/checkout.html
+++ b/oscar/templates/checkout/checkout.html
@@ -1,8 +1,9 @@
 {% extends "checkout/layout.html" %}
 {% load currency_filters %}
+{% load i18n %}
 
 {% block title %}
-Checkout | {{ block.super }}
+{% trans "Checkout" %} | {{ block.super }}
 {% endblock %}
 
 {% block header %}
@@ -24,28 +25,28 @@ Checkout | {{ block.super }}
     {% block shipping_address %}
     <div class="span6">
         <div class="sub-header">
-            <h2>Shipping address</h2>
+			<h2>{% trans "Shipping address" %}</h2>
         </div>
         <div class="well well-info">
             <dl>
-                <dt>Address</dt>
+				<dt>{% trans "Address" %}</dt>
                 <dd>
                     {% for field in shipping_address.active_address_fields %}
                     {{ field }}<br/>
                     {% endfor %}
                 </dd>
                 {% if shipping_address.phone_number %}
-                <dt>Contact number</dt>
+				<dt>{% trans "Contact number" %}</dt>
                 <dd>{{ shipping_address.phone_number }}</dd>
                 {% endif %}
                 {% if shipping_address.notes %}
-                <dt>Shipping notes</dt>
+				<dt>{% trans "Shipping notes" %}</dt>
                 <dd>{{ shipping_address.notes }}</dd>
                 {% endif %}
             </dl>
             {% block shipping_address_actions %}
             <div class="alert-actions">
-                <a href="{% url checkout:shipping-address %}" class="btn">Change shipping address</a>
+				<a href="{% url checkout:shipping-address %}" class="btn">{% trans "Change shipping address" %}</a>
             </div>
             {% endblock %}
         </div>
@@ -55,12 +56,12 @@ Checkout | {{ block.super }}
     {% block payment_method %}
    <div class="span6">
        <div class="sub-header">
-            <h2>Payment</h2>
+		   <h2>{% trans "Payment" %}</h2>
         </div>
         <div class="well well-success">
-            <p>Payment details to go here</p>
+			<p>{% trans "Payment details to go here" %}</p>
             <div class="alert-actions">
-				<a href="{% url checkout:payment-details %}" class="btn">Change payment details</a>
+				<a href="{% url checkout:payment-details %}" class="btn">{% trans "Change payment details" %}</a>
             </div>
         </div>    
     </div>
@@ -69,13 +70,13 @@ Checkout | {{ block.super }}
 
 {% block order_contents %}
     <div class="sub-header">
-        <h2>Order contents</h2>
+		<h2>{% trans "Order contents" %}</h2>
     </div>
     <div class="basket-title">
         <div class="row-fluid">
-            <h4 class="span10">Items in basket</h4>
-            <h4 class="span1">Quantity</h4>
-            <h4 class="span1">Price</h4>
+			<h4 class="span10">{% trans "Items in basket" %}</h4>
+			<h4 class="span1">{% trans "Quantity" %}</h4>
+			<h4 class="span1">{% trans "Price" %}</h4>
         </div>
     </div>
     {% for line in basket.all_lines %}
@@ -104,14 +105,6 @@ Checkout | {{ block.super }}
         </div>
     </div>
     {% endfor %}
-    <!-- {% if shipping_total_excl_tax %}
-        <div class="basket-items">
-            <div class="row-fluid">
-                <h4 class="span11">Shipping charge</h4>
-                <div class="span1">{{ shipping_total_incl_tax|currency }}</div>
-            </div>
-        </div>
-        {% endif %} -->
     {% if shipping_method %}
     <div class="basket-items">
         <div class="row-fluid">
@@ -125,19 +118,19 @@ Checkout | {{ block.super }}
     {% endif %}
     <div class="basket-items">
         <div class="row-fluid">
-            <h4 class="span11">Basket total:</h4>
+			<h4 class="span11">{% trans "Basket total:" %}</h4>
             <div class="span1">{{ basket.total_incl_tax|currency }}</div>
         </div>
     </div>
     <div class="basket-items total">
         <div class="row-fluid">
-            <h3 class="span11">Order total:</h3>
+			<h3 class="span11">{% trans "Order total:" %}</h3>
             <h3 class="span1">{{ order_total_incl_tax|currency }}</h3>
         </div>
     </div>
     {% block order_contents_actions %}
     <div class="form-actions">
-        <a href="{% url basket:summary %}" class="btn">Edit order contents</a>
+		<a href="{% url basket:summary %}" class="btn">{% trans "Edit order contents" %}</a>
     </div>
     {% endblock %}
 {% endblock order_contents %}
