--- a/oscar/templates/checkout/gateway.html
+++ b/oscar/templates/checkout/gateway.html
@@ -1,8 +1,9 @@
 {% extends "checkout/layout.html" %}
 {% load currency_filters %}
+{% load i18n %}
 
 {% block title %}
-Checkout gateway | {{ block.super }}
+{% trans "Checkout gateway" %} | {{ block.super }}
 {% endblock %}
 
 {% block checkout-nav %}
@@ -12,7 +13,7 @@ Checkout gateway | {{ block.super }}
 {% block content %}
 
 <div class="sub-header">
-	<h2>Who are you?</h2>
+	<h2>{% trans "Who are you?" %}</h2>
 </div>
 
 <form action="." method="post" class="form-stacked well">
@@ -36,7 +37,7 @@ Checkout gateway | {{ block.super }}
 		<div class="controls">
 			<label class="radio">
 			     <input type="radio" id="id_options_1" name="options" value="existing" {% if form.password.errors %}checked="checked"{% endif %} />
-			    I have an account and my password is:
+				 {% trans "I have an account and my password is" %}:
 			</label>
 		</div>
 	</div>
@@ -52,20 +53,20 @@ Checkout gateway | {{ block.super }}
 		</div>
 	</div>	
 			
-    <p><a href="{% url password-reset %}">Get a password reminder</a></p>
+	<p><a href="{% url password-reset %}">{% trans "Get a password reminder" %}</a></p>
 	
 	<div class="control-group">
 		<div class="controls">
 			<label class="radio">
 			     <input type="radio" id="id_options_0" name="options" value="new" {% if not form.password.errors %}checked="checked"{% endif %} />
-			    I don't want to create an account:
+				 {% trans "I don't want to create an account" %}:
 			</label>
 		</div>
 	</div>
 		
 	<div class="form-actions">
-		<button type="submit" class="btn btn-large btn-primary">Continue</button>
-		 Alternatively <a href="{% url customer:register %}?next={% url checkout:index %}">create an account</a> before you checkout.
+		<button type="submit" class="btn btn-large btn-primary">{% trans "Continue" %}</button>
+		{% trans "Alternatively" %} <a href="{% url customer:register %}?next={% url checkout:index %}">{% trans "create an account" %}</a> {% trans "before you checkout." %}
 	</div>
 </form>
 
