--- a/oscar/templates/checkout/thank_you.html
+++ b/oscar/templates/checkout/thank_you.html
@@ -1,8 +1,9 @@
 {% extends "checkout/layout.html" %}
 {% load currency_filters %}
+{% load i18n %}
 
 {% block title %}
-Confirmation of order {{ order.number }} | {{ block.super }}
+{% trans "Confirmation of order" %} {{ order.number }} | {{ block.super }}
 {% endblock title %}
 
 {% block checkout-nav %}{% endblock %}
@@ -10,18 +11,20 @@ Confirmation of order {{ order.number }} | {{ block.super }}
 
 {% block content %}
 <div class="sub-header">
-    <h1>Confirmation for order #{{ order.number }}</h1>
+	<h1>{% blocktrans with order_num=order.number %}
+		Confirmation for order #{{ order_num }}
+		{% endblocktrans %}</h1>
 </div>
-<p>Your order has been placed and a confirmation email has ben sent - your order number is <span class="label label-success">{{ order.number }}</span></p>
-<p>Please make a note of this reference or print this page and quote it in any communication
-with us regarding your order.</p>
+<p>{% trans "Your order has been placed and a confirmation email has ben sent - your order number is" %}
+<span class="label label-success">{{ order.number }}</span></p>
+<p>{% trans "Please make a note of this reference or print this page and quote it in any communication with us regarding your order." %}</p>
 
 <div class="row-fluid">
     <div class="span6">
 		{% block shipping_info %}
         <div class="well well-info">
-            <h3>Shipping</h3>
-            <p>Your order will be delivered to:</p>
+			<h3>{% trans "Shipping" %}</h3>
+			<p>{% trans "Your order will be delivered to:" %}</p>
             {% for line in order.shipping_address.active_address_fields %}
             {{ line }}<br/>
             {% endfor %}
@@ -31,7 +34,7 @@ with us regarding your order.</p>
     <div class="span6">
 		{% block payment_info %}
         <div class="well well-success">
-            <h3>Payment</h3>
+			<h3>{% trans "Payment" %}</h3>
             {% for source in order.sources.all %}
             {{ source }}
             {% endfor %}
@@ -40,15 +43,15 @@ with us regarding your order.</p>
     </div>
 </div>
 <div class="sub-header">
-    <h3>Order details</h3>
+	<h3>{% trans "Order details" %}</h3>
 </div>
 
 <div class="basket-title">
     <div class="row-fluid">
-        <h4 class="span7">Items purchased</h4>
-        <h4 class="span3">Estimated dispatch date</h4>
-        <h4 class="span1">Quantity</h4>
-        <h4 class="span1">Cost</h4>
+		<h4 class="span7">{% trans "Items purchased" %}</h4>
+		<h4 class="span3">{% trans "Estimated dispatch date" %}</h4>
+		<h4 class="span1">{% trans "Quantity" %}</h4>
+		<h4 class="span1">{% trans "Cost" %}</h4>
     </div>
 </div>
 
@@ -82,26 +85,26 @@ with us regarding your order.</p>
 
 <div class="basket-items">
     <div class="row-fluid">
-        <h4 class="span11">Basket total</h4>
+		<h4 class="span11">{% trans "Basket total" %}</h4>
         <div class="span1">{{ order.basket_total_incl_tax|currency }}</div>
     </div>
 </div>
 <div class="basket-items">
     <div class="row-fluid">
-        <h4 class="span11">Shipping charge - {{order.shipping_method}}</h4>
+		<h4 class="span11">{% trans "Shipping charge - {{order.shipping_method}}" %}</h4>
         <div class="span1">{{ order.shipping_incl_tax|currency }}</div>
     </div>
 </div>
 <div class="basket-items total">
     <div class="row-fluid">
-        <h3 class="span11">Order total</h3>
+		<h3 class="span11">{% trans "Order total" %}</h3>
         <h3 class="span1">{{ order.total_incl_tax|currency }}</h3>
     </div>
 </div>
  
 {% if not order.user %}
     <div class="sub-header">
-        <h4>Tracking your order</h4>
+		<h4>{% trans "Tracking your order" %}</h4>
     </div>
 	<p>You can
 	<a href="{% url customer:anon-order order.number order.verification_hash %}">track the status of your order</a>.</p>
@@ -109,8 +112,8 @@ with us regarding your order.</p>
 {% endif %}
 
 <div class="form-actions">
-    <a onclick="window.print()" href="#" class="btn btn-primary btn-large">Print this page</a>
-    <a href="/" class="btn btn-primary btn-large pull-right">Continue shopping</a>
+	<a onclick="window.print()" href="#" class="btn btn-primary btn-large">{% trans "Print this page" %}</a>
+	<a href="/" class="btn btn-primary btn-large pull-right">{% trans "Continue shopping" %}</a>
 </div>
 {% endblock content %}
 
