--- a/oscar/templates/checkout/user_address_delete.html
+++ b/oscar/templates/checkout/user_address_delete.html
@@ -1,4 +1,5 @@
 {% extends "checkout/checkout.html" %}
+{% load i18n %}
 
 {% block order_contents %}{% endblock %}
 {% block shipping_method %}{% endblock %}
@@ -6,7 +7,7 @@
 {% block payment_details %}{% endblock %}
 
 {% block checkout-nav %}
-{% include 'checkout/nav.html' with step=1 %}
+	{% include 'checkout/nav.html' with step=1 %}
 {% endblock %}
 
 {% block shipping_address %}
@@ -15,8 +16,8 @@
 <form action="." method="post">
     {% csrf_token %}
 	{{ object.summary }}
-	<p>Are you sure you want to delete this address? <button type="submit" class="btn btn-danger">Yes!</button>
-	or <a href="{% url checkout:shipping-address %}">cancel</a>.</p>
+	<p>{% trans "Are you sure you want to delete this address?" %} <button type="submit" class="btn btn-danger">{% trans "Yes!" %}</button>
+	{% trans "or" %} <a href="{% url checkout:shipping-address %}">{% trans "cancel" %}</a>.</p>
 </form>
 
 {% endblock shipping_address %}
