--- a/oscar/templates/partials/nav_primary.html
+++ b/oscar/templates/partials/nav_primary.html
@@ -1,5 +1,7 @@
 {% load currency_filters %}
 {% load category_tags %}
+{% load i18n %}
+
 <div class="navbar primary">
     <div class="navbar-inner">
         <div class="container" style="width: auto;">
@@ -9,9 +11,9 @@
                 <span class="icon-bar"></span>
             </a>
             <a class="btn btn-navbar app-ico ico_shop_bag btn-cart hidden" href="{% url checkout:index %}">
-                <strong>Basket 
+				<strong>{% trans "Basket" %}
                 {% if request.basket.all_lines.count %}
-                    Total: {{ basket.total_incl_tax|currency }}
+				{% trans "Total:" %} {{ basket.total_incl_tax|currency }}
                 {% endif %}
                 </strong>
             </a>
@@ -20,9 +22,9 @@
                 <div id="browse" class="nav dropdown">
                     
                     {% if categories %}
-                        <a href="#browse" class="dropdown-toggle" data-toggle="dropdown">Browse Store</a>   
+					<a href="#browse" class="dropdown-toggle" data-toggle="dropdown">{% trans "Browse Store" %}</a>
                         <ul class="dropdown-menu nav-tabs nav-stacked">
-                            <li><a href="/products">All Products</a></li>
+							<li><a href="/products">{% trans "All Products" %}</a></li>
                         {% for category in categories %}
                             <li><a href="{{ category.0.get_absolute_url }}">{{ category.0.name }} {% if category.1 %}<span class="app-ico ico_fill_right"></span>{% endif %}</a>
                             {% if category.1 %}
@@ -36,19 +38,19 @@
                         {% endfor %}
                         </ul>
                     {% else %}
-                        <a href="#browse" class="dropdown-toggle" data-toggle="dropdown">Browse Store</a>   
+					<a href="#browse" class="dropdown-toggle" data-toggle="dropdown">{% trans "Browse Store" %}</a>
                         <ul class="dropdown-menu nav-tabs nav-stacked">
-                            <li><a href="/products">All Products</a></li>
+							<li><a href="/products">{% trans "All Products" %}</a></li>
                             <li>
-                                <a href="#" >Contains a Submenu  <span class="app-ico ico_fill_right"></span></a>
+							<a href="#" >{% trans "Contains a Submenu" %}  <span class="app-ico ico_fill_right"></span></a>
                                 <ul class="sub-nav dropdown-menu nav nav-tabs nav-stacked span3">
-                                    <li><a href="#" class="app-ico ico_outline_right"> Submenu Link</a></li>
-                                    <li><a href="#" class="app-ico ico_outline_right"> Submenu Link</a></li>
-                                    <li><a href="#" class="app-ico ico_outline_right"> Submenu Link</a></li>
-                                    <li><a href="#" class="app-ico ico_outline_right"> Submenu Link</a></li>
+									<li><a href="#" class="app-ico ico_outline_right">{% trans "Submenu Link" %}</a></li>
+									<li><a href="#" class="app-ico ico_outline_right">{% trans "Submenu Link" %}</a></li>
+									<li><a href="#" class="app-ico ico_outline_right">{% trans "Submenu Link" %}</a></li>
+									<li><a href="#" class="app-ico ico_outline_right">{% trans "Submenu Link" %}</a></li>
                                 </ul>
                             </li>
-                            <li><a href="/">Go Home!</a></li>
+							<li><a href="{% url promotions:home %}">{% trans "Go Home!" %}</a></li>
                         </ul>
                     {% endif %}
                 </div>
