--- a/oscar/templates/reviews/_vote_bit.html
+++ b/oscar/templates/reviews/_vote_bit.html
@@ -1,13 +1,15 @@
+{% load i18n %}
+
 {% if user.is_authenticated %}
-Is this review helpful?<br/>
+{% trans "Is this review helpful?" %}<br/>
     <form action="{{ review.get_absolute_url }}" method="post" class="vote_agree" >
         {% csrf_token %}               
         <input type="hidden" name="delta" value="1"/>
-        <button type="submit" value="I agree" class="btn btn-success btn-small">Yes</button>
+		<button type="submit" class="btn btn-success btn-small">{% trans "Yes" %}</button>
     </form>
     <form  action="{{ review.get_absolute_url }}" method="post">
         {% csrf_token %}                
         <input type="hidden" name="delta" value="-1"/>
-        <button type="submit" class="btn btn-small" value="I disagree">No</button>
+		<button type="submit" class="btn btn-small">{% trans "No" %}</button>
     </form>
 {% endif %}
