Display order status on anonymous order-status page

--- a/oscar/templates/customer/anon-order.html
+++ b/oscar/templates/customer/anon-order.html
@@ -8,8 +8,12 @@
 </div>
 {% endblock header %}
 
-
 {% block content %}
+<div class="sub-header">
+    <h3>Status</h3>
+</div>
+<p>{{ order.status }}</p>
+
 <div class="sub-header">
     <h3>Shipping address</h3>
 </div>
