--- a/oscar/templates/dashboard/catalogue/category_list.html
+++ b/oscar/templates/dashboard/catalogue/category_list.html
@@ -12,7 +12,7 @@ Category management | {{ block.super }}
         <a href="{% url dashboard:index %}">Dashboard</a>
         <span class="divider">/</span>
     </li>
-    <li class="active"><a href=".">Categories</a></li>
+    <li class="active"><a href=".">Category management</a></li>
 </ul>
 {% endblock %}
 
@@ -25,38 +25,43 @@ Category management | {{ block.super }}
 {% block dashboard_content %}
 
 <div class="well well-info">
-    <h3 class="app-ico ico_expand icon"><a href="{% url dashboard:catalogue-category-create %}">Create a new category</a></h3>
-</div>
-
-<div class="well well-info">
-    <a href="{% url dashboard:catalogue-category-list %}">Home</a> >
+	<p>You are editing:
+    <a href="{% url dashboard:catalogue-category-list %}">Home</a>
     {% if ancestors %}
+	    &gt;
         {% for ancestor in ancestors %}
             <a href="{% url dashboard:catalogue-category-detail-list pk=ancestor.pk %}">{{ ancestor.name }}</a>{% if not forloop.last %} > {% endif %}
         {% endfor %}
     {% endif %}
+	</p>
 </div>
 
 <table class="table table-striped table-bordered">
+	<thead>
+		<tr>
+			<th>Name</th>
+			<th>Description</th>
+			<th>Number of child categories</th>
+			<th></th>
+		</tr>
+	</thead>
+	<tbody>
     {% for category in child_categories %}
         <tr>
+            <td>{{ category.name }}</td>
+			<td>{{ category.description|default:""|truncatewords:6 }}</td>
+			<td>{{ category.get_children_count }}</td>
             <td>
-            {% if category.get_children_count > 0 %}
-                <a href="{% url dashboard:catalogue-category-detail-list pk=category.pk %}">{{ category.name }}</a>
-            {% else %}
-                {{ category.name }}
-            {% endif %}
-            </td>
-            <td>
-                <a class="btn btn-primary" href="{% url dashboard:catalogue-category-update category.id %}">Edit</a>
-                <a class="btn btn-success" href="{% url dashboard:catalogue-category-delete category.id %}">Delete</a>
+                <a class="btn btn-primary" href="{% url dashboard:catalogue-category-update category.id %}">Edit category</a>
+				<a class="btn btn-primary {% if not category.has_children %}disabled{% endif %}" href="{% url dashboard:catalogue-category-detail-list pk=category.pk %}">Edit children</a>
+				<a class="btn btn-info" href="{{ category.get_absolute_url }}">View on site</a>
+                <a class="btn btn-danger" href="{% url dashboard:catalogue-category-delete category.id %}">Delete</a>
             </td>
         </tr>
     {% endfor %}
+	</tbody>
 </table>
 
-<div class="sub-header">
-    <h2>{{ queryset_description }}</h2>
-</div>
+<a class="btn btn-large btn-primary" href="{% url dashboard:catalogue-category-create %}">Create a new category</a>
 
 {% endblock dashboard_content %}
